@@ -6,6 +6,7 @@
     look in applications subdirs for .desktop file; debug info #405
     clear g_ascii_strcasecmp warning on owner sort
     case insensitive app sort, tooltips, uniq in app chooser dialog #405
+    startup test for /bin/bash installed #413
 0.9.2   2013-12-06:
     README correct packages link
     manual note full/max col widths not saved #382
